--- a/client/public/index.html
+++ b/client/public/index.html
@@ -34,11 +34,12 @@
     <noscript>
       <strong>We're sorry but vue-argon-design-system doesn't work properly without JavaScript enabled. Please enable it to continue.</strong>
     </noscript>
+    <div id="preloader-block" class="preloader-block"></div>
     <div id="app"></div>
     <!-- built files will be auto injected -->
   </body>
   <script type="text/javascript">
-    if (window.location.hash == '#_=_'){
+    if (window.location.hash == '#_=_' || window.location.hash == '#!'){
       history.replaceState
           ? history.replaceState(null, null, window.location.href.split('#')[0])
           : window.location.hash = '';
